# agent-event-bus

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python.yml
docs/: EXAMPLE_COMMS.md  TAILSCALE_SETUP.md
docs/superpowers/specs/: 2026-03-31-resume-cursor-persistence-design.md
scripts/: com.evansenter.claude-event-bus.plist  dev.sh  install-cli.sh  install-launchagent.sh  install-systemd.sh  start.sh  test-dm-notifications.sh  uninstall-launchagent.sh
scripts/icon-gen/: Cargo.toml
scripts/icon-gen/src/: main.rs
src/agent_event_bus/: cli.py  guide.md  middleware.py  server.py  session_ids.py  storage.py
src/event_bus/: cli.py  guide.md  helpers.py  middleware.py  server.py  storage.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_middleware.py  test_notifications.py  test_server.py  test_session_ids.py  test_storage.py  test_webhooks.py
